--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,43 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+
+html, body {
+  @apply antialiased;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+html, body {
+  height: 100%;
+  overflow: hidden;
+}
+* {
+  @apply transition-all duration-100;
+  scrollbar-width: none;
+
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+#main-container {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  overflow: auto;
+}
+
+.no-scroll {
+  scrollbar-width: none;
+}
+
+#backName {
+  width:inherit;
+  max-width:inherit;
+  position: sticky;
+  top: 0;
+}
+
+#mainContainer {
+  /* display: flex; */
+  justify-content: space-around;
+  align-items: flex-start;
 }
